src/test/ui/match/match-type-err-first-arm.stderr
error[E0308]: mismatched types
  --> $DIR/match-type-err-first-arm.rs:9:15
   |
LL | fn test_func1(n: i32) -> i32 {
   |                          --- expected `i32` because of return type
...
LL |         12 => 'b',
   |               ^^^ expected i32, found char

error[E0308]: match arms have incompatible types
  --> $DIR/match-type-err-first-arm.rs:21:14
   |
LL |       let x = match n {
   |  _____________-
LL | |     //~^ NOTE `match` arms have incompatible types
LL | |         12 => 'b',
   | |               --- this is found to be of type `char`
LL | |         //~^ NOTE this is found to be of type `char`
LL | |         _ => 42,
   | |              ^^ expected char, found integer
...  |
LL | |         //~| NOTE expected type `char`
LL | |     };
   | |_____- `match` arms have incompatible types
   |
   = note: expected type `char`
              found type `{integer}`

error[E0308]: match arms have incompatible types
  --> $DIR/match-type-err-first-arm.rs:39:14
   |
LL |       let x = match n {
   |  _____________-
LL | |     //~^ NOTE `match` arms have incompatible types
LL | |         1 => 'b',
LL | |         2 => 'b',
...  |
LL | |         6 => 'b',
   | |              --- this and all prior arms are found to be of type `char`
LL | |         //~^ NOTE this and all prior arms are found to be of type `char`
LL | |         _ => 42,
   | |              ^^ expected char, found integer
...  |
LL | |         //~| NOTE expected type `char`
LL | |     };
   | |_____- `match` arms have incompatible types
   |
   = note: expected type `char`
              found type `{integer}`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
